# agds_parallel

cuda/: .gitignore  agds_cuda.sln
cuda/agds_cuda/: AGDS.cu  CONN.cu  VNG.cu  agds_cuda.vcxproj  agds_cuda.vcxproj.filters  agdsgpu.cuh  avbtree.hpp  main.cpp  measurements.hpp  mock_agds_data.cpp  mock_agds_data.hpp  utils.cpp  utils.hpp
cuda/old/: Agds.cpp  Conn.cpp  ConnSparse.cpp  ProductVec.cpp  VnVecDense.cpp  agds_components.hpp  inference.cu  inference.cuh
mpi/: .gitignore  CMakeLists.txt
mpi/src/: events.hpp  inference.cpp  inference.hpp  logging_states.cpp  logging_states.hpp  main.cpp  main_exp.cpp  mock_agds_data.cpp  mock_agds_data.hpp  scan_prod_mpi.cpp  scan_prod_mpi.hpp  utils.cpp  utils.hpp
mpi/test/: a.out  test.cpp
ref/: CMakeLists.txt  CMakeSettings.json
ref/agds_ref/: Agds.cpp  CMakeLists.txt  agds.hpp  agds_components.hpp  agds_ref.cpp  agds_ref.h  avbtree.hpp  inference.cpp  inference.hpp  inference_old.cpp  inference_old.hpp  measurements.cpp  measurements.hpp  mock_agds_data.cpp  mock_agds_data.hpp  utils.cpp
